tests/compile_fail/display/legacy_fmt_syntax.stderr
error: legacy syntax, remove `fmt =` and use `"Stuff({}): {}", bar` instead
 --> tests/compile_fail/display/legacy_fmt_syntax.rs:2:10
  |
2 | #[display(fmt = "Stuff({}): {}", "bar")]
  |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
